@@ -110,6 +110,9 @@ Version 8.38 xx-xxx-xxxx
 28. If pcregrep was given the -q option with -c or -l, or when handling a 
     binary file, it incorrectly wrote output to stdout.
      
+29. The JIT compiler did not restore the control verb head in case of *THEN
+    control verbs. This issue was found by Karl Skomski with a custom LLVM fuzzer.
+
 
 Version 8.37 28-April-2015
 --------------------------
